Resolves tdf#166733 - Show Welcome dialog only once

WhatsNewDialog made nilable with default=nil; on the very first
start this variable is set to true (and potentially toggled to
false by the user later)

Change-Id: I8653c9de2ae58233a614acba5ee3a35fd97c8154
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185905
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins